# ytagent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py
.github/scripts/: coverage_report.py
.github/workflows/: ci.yml
agents/: youtube_agent.py
backend/: alembic.ini  dependencies.py  main.py  pyproject.toml
backend/admin/: setup.py  views.py
backend/agents/: youtube_agent.py
backend/agents/tools/: video_tools.py
backend/alembic/: env.py
backend/alembic/versions/: 607da5cc3f56_.py  6fc66f02f8df_create_videos_table.py  94778f0ceddc_.py  efdca6290227_.py
backend/db/: base.py  session.py
backend/db/models/: chat.py  chat_knowledge.py  knowledge_item.py  message.py  user.py  video.py
backend/integrations/: youtube.py
backend/routers/: chat.py  video.py
backend/schemas/: chat.py
backend/services/: video_service.py
backend/tests/: test_sample.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  page.tsx
frontend/components/: chat-input.test.tsx  chat-input.tsx  chat-window.tsx  message-buble.tsx  video-sidebar.tsx
frontend/lib/: chat-api.ts
frontend/mock/: messages.ts  videos.ts
frontend/types/: chat.ts  video.ts
integrations/: youtube.py
