[project]
name = "ytagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "psycopg[binary]>=3.3.4",
    "sqladmin>=0.27.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.mypy]
strict = true

[tool.coverage.report]
show_missing = true
skip_covered = false
